# commit-eval

./: Cargo.toml  README.md
src/: commit.rs  evaluation.rs  evaluator.rs  git.rs  lib.rs  main.rs
templates/: prompt.txt  system_prompt.md.jinja  user_message.md.jinja
