[package]
name = "commit-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { git = "https://github.com/djc/askama" }
async-openai = "0.24.0"
dotenvy = "0.15.7"
conventional_commits = { git = "https://github.com/shubhexists/conventional_commits/" }
reqwest = {version = "0.12.7", features = ["json"] }
schemars = "0.8.21"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
